P02_2/css/main.css
/*sizes things based on the extent of margins borders and everything*/
/*code obtained from class*/
* { 
	box-sizing: border-box;
}

body {
	font-size: 1.25rem;
	font-family: Verdana, Arial, sans-serif; /*citation: https://www.w3schools.com/css/css_font.asp*/
	background-color: white;
}

h1 {
	color: rgb(52,73,94);
	font-size: 2.5rem; /* em is a proportional unit but proportional to its parent size */
	font-weight: 700;
	letter-spacing: 0.02rem; /*code from https://www.w3schools.com/cssref/pr_text_letter-spacing.asp*/
	margin-bottom: 0; /* 0 doesnt require units because it will always be 0 */
	line-height: 3rem;
	margin-top: 3rem;
	padding-left: 1rem;
}

h2 {
	color: rgb(140, 140, 140);
	font-size: 1.8rem;
	font-weight: 500;
	letter-spacing: 0.01rem;
	padding-left: 1rem;
}

h3 {
	color: rgb(124,147,157);
	font-size: 1.5rem;
	font-weight: 300;
	letter-spacing: 0.005rem;
	line-height: 0.2rem;
	padding-left: 1rem;
}


p {
	font-size: 1rem;
	font-weight: 100;
	letter-spacing: 0.007rem;
	padding-left: 1rem;

}

a {
	color: rgb(200, 0, 0);
	transition: color 0.5s;
	padding: 1rem;
}

a:hover, a:focus, a:active { /*hover for when using a mouse and focus for when using a keyboard pressing tab*/
	color: rgb(50, 0, 0);
}

section {
	margin-bottom: 2rem;
}

#home {
	margin-bottom: 0rem;
	padding-top: 1rem;
	padding-bottom: 2.5rem;
	background-color: rgb(52,73,94);
}

.box-item-nav-home {
	display: inline-block;
	text-align: center;
}

.nav-home { /* . means class */
    color: white; /* grey-blue */
    font-size: 2rem;
    letter-spacing: 0.3rem;
    text-decoration: none; /* gets rid of the underline */
    transition: background-color 0.5s;
 	position: relative;
 	top: 0.4rem;
  }

.nav-home:active, .nav-home:focus, .nav-home:hover {
    color: white; 
}

.nav-main { /* . means class */
	display: inline-block;
    text-align: center;
    color: rgb(124,147,157); /* grey-blue */
    font-size: 1rem;
    letter-spacing: 0.3rem;
    text-decoration: none; /* gets rid of the underline */
    padding-bottom: 0.5rem;
    padding-top: 0.5rem;
    padding-left: 2.5rem;
    padding-right: 2.5rem;
    transition: background-color 0.5s;
    border-right: 0.5px solid rgb(214,214,214); /* light grey */
    border-left: 0.5px solid rgb(214,214,214); /* light grey */
    border-bottom: 0.5px solid rgb(214,214,214); /* light grey */ 
   	border-top: 0.5px solid rgb(214,214,214); /* light grey */
    width: 33.33%;  
  }

.nav-main:active, .nav-main:focus, .nav-main:hover {
    color: rgb(52,73,94); /* darker blue */
}

/* _________________________________________________________________________________

	code from https://codepen.io/secondfret/pen/GoqLK
_________________________________________________________________________________ */

.logo_place {
	position: relative;
	top: 1rem;
	width: 2.7rem;
	height: 2.7rem;
	padding: 0;
}
/* _________________________________________________________________________________

	nav properties ends 
_________________________________________________________________________________ */


/* _________________________________________________________________________________

	home page icon properties begins 
_________________________________________________________________________________ */

.profile {
	font-size: 1.5rem;
	color: rgb(124,147,157);
	margin-right: 0.5rem;
	margin-top: 1rem;

	padding: 1rem;
	padding-right: 1.5rem; 

	display: inline-block;
	width: 32%;
	height: auto;
	text-align: center;
}

.profile p {
	color: rgb(124,147,157);
	padding-top: 1rem;
	font-size: 0.8rem;
}

.profile span {
	border-bottom: 0.5px solid rgb(214,214,214); /* light grey */ 
	padding-bottom: 1rem;
}

.lnr-store {
	font-size: 1.5rem;
	color: rgb(140,140,140);
}

.lnr-users {
	font-size: 1.4rem;
	color: rgb(140,140,140);
}

.lnr-magic-wand {
	font-size: 1.3rem;
	color: rgb(140,140,140);
}
/* _________________________________________________________________________________
	
	home page icon properties ends 
_________________________________________________________________________________ */


/* _________________________________________________________________________________

	home events properties begin 
_________________________________________________________________________________*/

.new-place {
	display: block;
   	border: 0.3px solid black;
   	height: 25rem;
}
/* _________________________________________________________________________________

	home events properties ends 
_________________________________________________________________________________ */


/* _________________________________________________________________________________

	icon nav properties begin 
_________________________________________________________________________________ */

.box-item-icons {
	color: white;
}

.lnr-user {
	position: absolute;
	top: 2.7rem;
	right: 2rem;
	font-size: 1.4rem;
}

.account {
	padding: 0;
	margin: 0;
}

.lnr-cart {
	position: absolute;
	top: 2.7rem;
	right: 5rem;
	font-size: 1.4rem;
}

.lnr-magnifier {
	position: absolute;
	top: 2.7rem;
	right: 8rem;
	font-size: 1.4rem;
}
/* _________________________________________________________________________________

	icon nav properties ends 
_________________________________________________________________________________ */


/* _________________________________________________________________________________

	about us page properties begin 
_________________________________________________________________________________ */

.square-form {
	display: inline-block;
	width: 45rem;
	height: 50rem;
	border: 0.5px solid rgb(124,147,157);
	background-color: rgb(245,245,245);
	margin-left: 7rem;
	margin-top: 7rem;
	padding-top: 3rem;
	padding-left: 3rem;
	padding-right: 3rem;
	padding-bottom: 3rem;
}

.square-form h3 {
	font-size: 1rem;
	color: rgb(92, 92, 92);
	margin-top: 3rem;
	margin-bottom: 3rem;
	letter-spacing: 0.15rem;
}
/* ... */

